--- a/OpenTKTutorials.csproj
+++ b/OpenTKTutorials.csproj
@@ -11,4 +11,8 @@
     <PackageReference Include="OpenTK" Version="4.7.7" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Resources\Shaders\" />
+  </ItemGroup>
+
 </Project>
